syntax = "proto3";


package crud;

option go_package = "./";

service CRUD {
  rpc CreateUser(Request) returns (Response) {}
  rpc GetUser(Request) returns (Response) {}
  rpc UpdateUser(Request) returns (Response) {}
  rpc DeleteUser(Request) returns (Response) {}
}


message Request {
  bytes body = 1;
}

message Response {
  bool success = 1;
  string body = 2;
}

